--- a/ADBLESK/Podfile
+++ b/ADBLESK/Podfile
@@ -4,6 +4,8 @@
 target 'ADBLESK' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
+	
+pod 'UMengAnalytics-NO-IDFA'
 
   # Pods for ADBLESK
 
